Make the outboundQ more threadsafe